@startuml classes
' ============================================================
' Диаграмма классов — Tsunami HTTP Load Testing Tool
' ============================================================

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam packageFontSize 14
skinparam arrowThickness 1.5
hide empty members

' ============================================================
' Пакет: internal/attack
' ============================================================
package "internal/attack" #EAF4FF {

    class AttackConfig {
        + URL         : string
        + Method      : string
        + Body        : string
        + Headers     : []string
        + Output      : string
        + Duration    : time.Duration
        + Timeout     : time.Duration
        + Workers     : uint
        + Connections : uint
        + RPS         : int
    }

    class RequestResult {
        + StatusCode    : int
        + Latency       : time.Duration
        + Success       : bool
        + ErrorType     : ErrorType
        + BytesSent     : uint64
        + BytesReceived : uint64
    }

    class GlobalMetrics {
        + TotalRequests : uint64
        + Successes     : uint64
        + Failures      : uint64
        + MinLatency    : time.Duration
        + MaxLatency    : time.Duration
        + BytesSent     : uint64
        + BytesReceived : uint64
        + TargetRPS     : int
        + StartTime     : time.Time
        + Duration      : time.Duration
        + ErrorTypes    : map[ErrorType]uint64
        + StatusCodes   : map[int]uint64
        - mu            : sync.Mutex
        --
        + NewGlobalMetrics() : *GlobalMetrics
        + AddLatency(latency time.Duration)
        + AddError(errType ErrorType)
        + AddBytes(sent uint64, received uint64)
        + ToJSON(cfg *AttackConfig, elapsed time.Duration, rps float64) : ([]byte, error)
    }

    enum ErrorType {
        timeout
        connection_refused
        dns
        tls
        other
    }

    RequestResult --> ErrorType
}

' ============================================================
' Пакет: cmd/server
' ============================================================
package "cmd/server" #FFF4EA {

    enum SessionStatus {
        idle
        running
        completed
        stopped
        error
    }

    class TestSession {
        + ID          : string
        + Status      : SessionStatus
        + Protocol    : string
        + StartTime   : time.Time
        + EndTime     : time.Time
        + ElapsedTime : time.Duration
        + Error       : error
        - stopCh      : chan struct{}
        - mu          : sync.RWMutex
        --
        + Start()
        + Stop()
        + Complete(metrics *GlobalMetrics, elapsed time.Duration)
        + GetStatus() : SessionStatus
        + GetMetrics() : *GlobalMetrics
        + IsRunning() : bool
    }

    class SessionManager {
        - current : *TestSession
        - mu      : sync.RWMutex
        --
        + NewSessionManager() : *SessionManager
        + GetCurrent() : *TestSession
        + CreateSession(id string, cfg *AttackConfig) : *TestSession
        + CreateGRPCSession(id string, cfg *GRPCConfig) : *TestSession
    }

    class Handlers {
        - sessionManager : *SessionManager
        - wsHub          : *Hub
        --
        + NewHandlers(sm *SessionManager, hub *Hub) : *Handlers
        + HandleStartAttack(w http.ResponseWriter, r *http.Request)
        + HandleStopAttack(w http.ResponseWriter, r *http.Request)
        + HandleStatus(w http.ResponseWriter, r *http.Request)
        + HandleResults(w http.ResponseWriter, r *http.Request)
        - runAttack(session *TestSession)
        - streamMetrics(session *TestSession)
    }

    class Hub {
        - clients    : map[*Client]bool
        - broadcast  : chan []byte
        - register   : chan *Client
        - unregister : chan *Client
        - mu         : sync.RWMutex
        --
        + NewHub() : *Hub
        + Run()
        + Broadcast(msg WSMessage)
        + ClientCount() : int
    }

    class Client {
        - hub  : *Hub
        - conn : *websocket.Conn
        - send : chan []byte
        --
        - readPump()
        - writePump()
    }

    class WSMessage {
        + Type      : string
        + Timestamp : string
        + Data      : interface{}
    }

    SessionManager "1" *-- "0..1" TestSession  : текущая сессия
    TestSession    -->  SessionStatus
    TestSession    -->  "internal/attack".GlobalMetrics : метрики
    TestSession    -->  "internal/attack".AttackConfig  : конфигурация

    Handlers       -->  SessionManager : менеджер сессий
    Handlers       -->  Hub            : ws-хаб

    Hub            "1" *-- "0..*" Client : клиенты
    Client         -->  Hub              : хаб
}

@enduml
